# textshrink

./: Cargo.toml  README.md
src/: alias.txt  common.txt  internal.rs  lib.rs  replacements.txt  uncommon.txt
