[package]
name = "textshrink"
version = "0.2.1"
edition = "2021"
description = "A minimalistic lib that reduces text size by replacing specific character sequences with single Unicode characters (e.g., 'mm' becomes '㎜'). On average, this compresses text by ~5%, with variation also ~5%."
license = "MIT"
authors = ["Miner3D"]
keywords = ["text", "unicode", "optimization", "compression"]
repository = "https://github.com/Miner3D/textshrink"


[lib]
name = "textshrink"
path = "src/lib.rs"


[dependencies]
